# Meta-data-extractor

./: .gitignore  CMakeLists.txt  Cargo.toml  Fix-IDM-Popup.ps1  IDM activation.bat  README.md  build.bat  build.rs  compile.bat
.github/workflows/: build.yml  release.yml
00.github/workflows/: build.yml
IDM FIX/: Cargo.toml  app.manifest  build.rs
IDM FIX/src/: admin.rs  cleanup.rs  idm.rs  main.rs  optimize.rs  startup.rs
src/: app.rs  camera_db.h  camera_db.rs  exiftool.rs  main.cpp  main.rs  metadata.rs  net_enrich.rs  resource.h  resource.rc
