[package]
name = "metalens"
version = "1.0.0"
edition = "2021"
description = "MetaLens - Deep Metadata Analyzer"

[dependencies]
eframe = { version = "0.31", features = ["default"] }
egui = "0.31"
rfd = "0.15"
arboard = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
once_cell = "1"
zip = { version = "2", default-features = false, features = ["deflate"] }
image = { version = "0.25", features = ["png"] }

[build-dependencies]
winres = "0.1"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"

[[bin]]
name = "MetaLens"
path = "src/main.rs"
